# optimized_forgottenserver

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  PVS-Studio.cfg  README.md  build-and-debug.sh  build-and-run.sh  build-and-test.sh  build.sh  canary_echo.sh  config.lua.dist  run-tests.sh  suppressions.txt  test.sh
.github/workflows/: build-and-run-ut.yml  build-ubuntu.yml  build-windows.yml  check-build-options.yml  reviewdog.yml
3rd/: CMakeLists.txt
3rd/cryptopp/: CMakeLists.txt
3rd/doctest/: CMakeLists.txt
3rd/mariadb-connector-c/: CMakeLists.txt
3rd/pugixml/: CMakeLists.txt
3rd/spdlog/: CMakeLists.txt
cmake/: Canary.cmake  CanaryLib.cmake  CommonProjectOptions.cmake  CompilerSanitizers.cmake  OptionCompilerWarnings.cmake  OptionsCanary.cmake  PVSStudio.cmake  TargetLinkLibrariesSystem.cmake  ToolCTags.cmake  ToolClangFormat.cmake  ToolClangTidy.cmake  ToolGitSubmodule.cmake  ToolIWYU.cmake  gitmetadata.h.in
data/: global.lua
data/items/: items.xml
data/lib/: lib.lua
data/lib/compat/: compat.lua
data/lib/core/: creature.lua  game.lua  storages.lua
data/modules/scripts/store/: store.lua
data/monster/: monsters.xml
data/monster/Bosses/: demodras.xml
data/monster/Custom/: target_dummy.xml
data/monster/Demons/: dawnfire_asura.xml  midnight_asura.xml
data/monster/Dragons/: dragon_lord.xml  frost_dragon.xml
data/npc/lib/npcsystem/: modules.lua  npchandler.lua
data/scripts/actions/other/: blessing_charms.lua  change_gold.lua  decay_to.lua  large_sea_shell.lua
data/scripts/creaturescripts/: login.lua
data/scripts/spells/: attack_berserk.lua
data/world/: canary-house.xml  canary-spawn.xml
docs/: Doxyfile.in  config.ld.in
src/: CMakeLists.txt  actions.cpp  actions.h  ban.cpp  bed.cpp  canary-server.rc  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  configmanager.cpp  configmanager.h  connection.cpp  const.h  container.cpp  creature.cpp  creature.h  creatureevent.h  database.cpp  database.h  databasemanager.cpp  databasetasks.h  decay.cpp  decay.h  definitions.h  enums.h  events.h  features.h  game.cpp  game.h  globalevent.cpp  globalevent.h  guild.cpp  house.cpp  housetile.cpp  ioguild.cpp  iologindata.cpp  iomap.cpp  iomap.h  (+58 more)
tests/: CMakeLists.txt  docker-compose.yaml  main.cpp
tests/src/: CMakeLists.txt  all.h  main.cpp  main.hpp
tests/src/combat/: CombatParams_test.cpp  canDoTargetCombat_test.cpp  combat_params_test.cpp  isTargetValid_test.cpp
tests/src/protocol/: NetworkMessage_test.cpp
tests/src/sample/: sample_test001.cpp
vc14/: canary-server.rc  canary-server.sln  canary-server.vcxproj
