set(SPDLOG_BUILD_ALL OFF)
set(SPDLOG_BUILD_BENCH OFF)
set(SPDLOG_BUILD_EXAMPLE OFF)
set(SPDLOG_BUILD_EXAMPLE_HO OFF)
set(SPDLOG_BUILD_SHARED OFF)
set(SPDLOG_BUILD_TESTS OFF)
set(SPDLOG_BUILD_TESTS_HO OFF)
set(SPDLOG_BUILD_WARNINGS OFF)
set(SPDLOG_ENABLE_PCH ON)
set(SPDLOG_ENABLE_WARNINGS OFF)
set(SPDLOG_FMT_EXTERNAL OFF)
set(SPDLOG_FMT_EXTERNAL_HO OFF)
set(SPDLOG_INSTALL OFF)
set(SPDLOG_NO_ATOMIC_LEVELS OFF)
set(SPDLOG_NO_EXCEPTIONS ON)
set(SPDLOG_NO_THREAD_ID OFF)
set(SPDLOG_NO_TLS OFF)
set(SPDLOG_PREVENT_CHILD_FD OFF)
set(SPDLOG_SANITIZE_ADDRESS OFF)
set(SPDLOG_TIDY OFF)

if(WIN32)
    set(SPDLOG_WCHAR_SUPPORT "Support wchar api" OFF)
    set(SPDLOG_WCHAR_FILENAMES "Support wchar filenames" OFF)
endif()

if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(SPDLOG_CLOCK_COARSE ON)
endif()

set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
add_subdirectory(${CANARY_EXTERNAL_PATH}/spdlog ${CANARY_EXTERNAL_OUTPUT_DIRECTORY}/spdlog)
